--- a/_posts/2016-06-07-Test.markdown
+++ b/_posts/2016-06-07-Test.markdown
@@ -9,7 +9,7 @@ author:     "owner_name"
 header-img: "img/postcover/pc001.jpg"
 tags: [tag01, tag02]
 categories: [cat01, cat02]
-comments: false
+comments: true
 ---
 
 (1절) 동해물과 백두산이 마르고 닳도록
